# zapp

./: CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
src/zapp/: __init__.py  __main__.py  cli.py  core.py  meta.py
test/: test_unit.py
