#


[metadata]
name = zapp
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = zapp application
license = Apache-2.0
long_description = file: README.rst
url = https://pypi.org/project/zapp


[options]
install_requires =
    setuptools
    wheel
package_dir =
    =src
packages = find:


[options.entry_points]
console_scripts =
    zapp = zapp.cli:main
distutils.commands =
    bdist_zapp = zapp.core:bdist_zapp


[options.extras_require]
package =
    twine
    wheel
test =
    pytest
    pytest-pep8
    pytest-pylint


[options.packages.find]
where = src


[bdist_zapp]
entry_point = zapp.cli:main


[tool:pytest]
addopts =
    --pylint-error-types='CEFIRW'


# EOF
