#


[bdist_zapp]
entry_point = zapp.cli:main


[check]
metadata = 1
strict = 1


[metadata]
name = zapp
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = Build zipapp single file Python applications easily
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    GitLab = https://gitlab.com/sinoroc/zapp
    GitHub = https://github.com/sinoroc/zapp
url = https://pypi.org/project/zapp


[options]
install_requires =
    importlib_metadata
    setuptools
    wheel
package_dir =
    = src
packages = find:


[options.entry_points]
console_scripts =
    zapp = zapp.cli:main
distutils.commands =
    bdist_zapp = zapp.core:bdist_zapp


[options.extras_require]
package =
    twine
    wheel
test =
    astroid<2.3
    pylint<2.4
    pytest
    pytest-pep8
    pytest-pylint


[options.packages.find]
where = src


[tool:pytest]
addopts =
    --pylint-error-types='CEFIRW'


# EOF
